@@ -1,3 +1,9 @@
+2010-11-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCpeeph.c,
+	  src/z80/peep.c:
+	  Fixed #3117748, improved fix for #3109557.
+
 2010-11-26 Raphael Neider <rneider AT web.de>
 
 	* src/pic14/glue.c (emitIvals): end retlw instruction with newline,
